# Object_ChatGPT_MININEC

./: CMakeLists.txt  Vec3.hpp  excitation.hpp  geometry.cpp  geometry.hpp  impedance_assembler.cpp  impedance_assembler.hpp  impedance_matrix.hpp  kernel.hpp  kernel_mininec.cpp  kernel_mininec.hpp  main.cpp  mininec_kernel.cpp  mininec_kernel.hpp  mom_solver.cpp  mom_solver.hpp  types.hpp
